<?xml version="1.0"?>
<package format="2">
  <name>STS_LTS_pose_plotter</name>
  <version>0.0.0</version>
  <description>STS_LTS_pose_plotter</description>
  <maintainer email="noemailhere@qmail.com">radam</maintainer>
  <license>closed</license>

  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>catkin_simple</buildtool_depend>
  <depend>rospy</depend>
  <depend>roscpp</depend>
  <depend>std_msgs</depend>
  <depend>genmsg</depend>

</package>
